add some changes

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Ebrahim ayyaf</h1>
+							<span class="image avatar48"><img src="./images/ebra.jpeg" alt="" /></span>
+							<h1 id="title">Ebrahim Ayyad</h1>
 							<p>Software Engineer</p>
 						</div>
 
@@ -84,13 +84,13 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="./images/js.png" alt="" /></a>
 										<header>
 											<h3>JavaScript</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="./images/html.png" alt="" /></a>
 										<header>
 											<h3>Html</h3>
 										</header>
@@ -98,13 +98,13 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="./images/css.webp" alt="" /></a>
 										<header>
 											<h3>CSS</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="./images/j.png" alt="" /></a>
 										<header>
 											<h3>jQuery</h3>
 										</header>
@@ -112,13 +112,13 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="./images/chartjs.png" alt="" /></a>
 										<header>
 											<h3>Chart.JS</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="./images/node.png" alt="" /></a>
 										<header>
 											<h3>node.js</h3>
 										</header>
@@ -137,7 +137,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="./images/images.png" alt="" /></a>
 
 							<p>I'm Ebrahim Ayyad, I'm 24 years old, I studied Software Engineering at The Hashemite University and I graduated in 2020, I'm excited for this class to take more information about programming.</p>
 
