add some changes

--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
 
 							<a href="#" class="image featured"><img src="./images/images.png" alt="" /></a>
 
-							<p>I'm Ebrahim Ayyad, I'm 24 years old, I studied Software Engineering at The Hashemite University and I graduated in 2020, I'm excited for this class to take more information about programming.</p>
+							<p style="color: gray;">I'm Ebrahim Ayyad, I'm 24 years old, I studied Software Engineering at The Hashemite University and I graduated in 2020, I'm excited for this class to take more information about programming.</p>
 
 						</div>
 					</section>
